--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,14 +18,17 @@ logging:
     console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
     file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 
-# Configuração do Swagger/OpenAPI (opcional)
+# Configuração do SpringDoc OpenAPI
 springdoc:
   api-docs:
     path: /v3/api-docs
   swagger-ui:
     path: /swagger-ui.html
     operationsSorter: method
-    tagsSorter: alpha
+    tags-sorter: alpha
+    doc-expansion: none
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
 
 # Configurações de banco de dados (exemplo com H2 em memória)
 #spring:
