--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -68,3 +68,16 @@ webclient:
 #    hibernate:
 #      ddl-auto: update
 #    show-sql: true
+
+# Configuração de agendamento do serviço RALIE
+ralie:
+  schedule:
+    # Expressão cron para executar a cada minuto (no segundo 0 de cada minuto)
+    # Para executar a cada hora, use: 0 0 * * * *
+    # Para executar a cada 30 minutos: 0 */30 * * * *
+    # Para executar a cada 5 minutos: 0 */5 * * * *
+    cron: 0 0 * * * *  # Executa a cada hora
+    # cron: 0 * * * * *  # Executa a cada minuto
+    enabled: true
+    # Nome do job para logs
+    job-name: "RALIE Download Job"
