--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,27 @@ spring:
   application:
     name: bolt-energy-app
   
+  # Configuração do banco de dados MySQL
+  datasource:
+    url: jdbc:mysql://localhost:3306/bolt_energy_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  
+  # Configuração do JPA
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    generate-ddl: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+        format_sql: true
+        jdbc:
+          time_zone: America/Sao_Paulo
+      javax.persistence.schema-generation.database.action: update
+  
 # Configuração do servidor
 server:
   port: 8182
