--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,19 +14,55 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false
     generate-ddl: true
+    open-in-view: false
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
         format_sql: true
         jdbc:
+          batch_size: 100
           time_zone: America/Sao_Paulo
+          fetch_size: 100
+        order_inserts: true
+        order_updates: true
+        batch_versioned_data: true
       javax.persistence.schema-generation.database.action: update
+      hibernate.cache.use_second_level_cache: false
+      hibernate.cache.use_query_cache: false
+      hibernate.generate_statistics: false
+      hibernate.jdbc.lob.non_contextual_creation: true
+      hibernate.temp.use_jdbc_metadata_defaults: false
+      hibernate.show_sql: false
+      hibernate.format_sql: false
+      hibernate.use_sql_comments: false
+      hibernate.jdbc.batch_size: 100
+      hibernate.jdbc.batch_versioned_data: true
+      hibernate.connection.autocommit: false
+      hibernate.jdbc.fetch_size: 100
+      hibernate.order_updates: true
+      hibernate.order_inserts: true
+      hibernate.jdbc.time_zone: America/Sao_Paulo
   
 # Configuração do servidor
 server:
   port: 8182
+
+# Configuração do RALIE
+ralie:
+  metadata:
+    store: db  # 'db' para banco de dados (padrão) ou 'file' para arquivo
+  schedule:
+    # Expressão cron para executar a cada minuto (no segundo 0 de cada minuto)
+    # Para executar a cada hora, use: 0 0 * * * *
+    # Para executar a cada 30 minutos: 0 */30 * * * *
+    # Para executar a cada 5 minutos: 0 */5 * * * *
+    cron: 0 0 * * * *  # Executa a cada hora
+    # cron: 0 * * * * *  # Executa a cada minuto
+    enabled: true
+    # Nome do job para logs
+    job-name: "RALIE Download Job"
 
 # Configuração de logging
 logging:
@@ -90,15 +126,3 @@ webclient:
 #      ddl-auto: update
 #    show-sql: true
 
-# Configuração de agendamento do serviço RALIE
-ralie:
-  schedule:
-    # Expressão cron para executar a cada minuto (no segundo 0 de cada minuto)
-    # Para executar a cada hora, use: 0 0 * * * *
-    # Para executar a cada 30 minutos: 0 */30 * * * *
-    # Para executar a cada 5 minutos: 0 */5 * * * *
-    cron: 0 0 * * * *  # Executa a cada hora
-    # cron: 0 * * * * *  # Executa a cada minuto
-    enabled: true
-    # Nome do job para logs
-    job-name: "RALIE Download Job"
