--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,13 @@
             <scope>test</scope>
         </dependency>
         
+        <!-- H2 Database for Testing -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+        
         <!-- Jakarta Annotations (for @PostConstruct) -->
         <dependency>
             <groupId>jakarta.annotation</groupId>
